githubhy published a site update

--- a/宋人轶事汇编卷二-4.html
+++ b/宋人轶事汇编卷二-4.html
@@ -419,12 +419,20 @@
 天圣中，童谣云：「曹门好，有好好；曹门高，有高高。」其后，今太皇太后为皇后，太皇太后姓曹氏。英宗皇帝即位，而高太后为皇后。高后，曹氏之所出。《东斋记事》卷一。</p></li>
 <li><p><span id="宋轶二-曹后-2"></span>
 天圣、明道间，京师盛歌一曲曰《曹门高》。未几，慈圣太后受册中宫，人以为验矣。其后宣仁与慈圣皆垂箔摄政，而宣仁实慈圣之甥，以故选配英庙，则征兆之意若曰：「曹门之高，当相继而起也。」《老学庵笔记》卷七。</p></li>
-<li><p><span id="宋轶二-曹后-3"></span>
-慈圣太后在女家时，尝因寒食与家人戏掷钱。一钱盘旋久之，遂侧立不仆，未几被选。《石林燕语》卷七。《避暑漫钞》。</p></li>
-<li><p><span id="宋轶二-曹后-4"></span>
-京兆李植，字化光，观察使士衡之孙。自少年好道，不乐婚宦。初，为侍禁，约婚慈圣。既娶，迎入门，见鬼神千万在其前。植惊走，逾墙避之。后时即还父母家，俄选为后焉。《默记》卷中。《甲申杂记》。《玉芝堂谈荟》卷一。</p></li>
+</ol>
+<ol start="3" style="list-style-type: decimal">
+<li>
+<span id="宋轶二-曹后-3"></span>
+慈圣太后在女家时，尝因寒食 <span style="color: magenta; font-size: 80%">寒食节</span> 与家人戏掷钱<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;即掷卢。古时赌博的一种。以骰五枚，上黑下白﹐掷之全黑为卢。&lt;/p&gt;&lt;p&gt;明 谢肇淛 《五杂俎·人部二》：“掷钱虽小戏，然 刘寄奴 能喝子成卢， 宋慈圣 侧立不仆， 光献 盘旋三日，似皆有鬼神使之者。”&lt;/p&gt;"><sup>111</sup></a>。一钱盘旋久之，遂侧立不仆，未几被选。《石林燕语》卷七。《避暑漫钞》。</li>
+</ol>
+<ol start="4" style="list-style-type: decimal">
+<li>
+<span id="宋轶二-曹后-4"></span>
+京兆 <span style="color: magenta; font-size: 80%">京兆尹</span> 李植，字化光，观察使<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;官名。唐于诸道置观察使，位次于节度使。中叶以后，多以节度使兼领其职。无节度使之州，亦特设观察使，管辖一道或数州，并兼领刺史之职。凡兵甲财赋民俗之事无所不领，谓之都府，权任甚重。宋观察使为虚衔，无定员。&lt;/p&gt;"><sup>112</sup></a>士衡之孙。自少年好道，不乐婚宦 <span style="color: magenta; font-size: 80%">结婚与作官</span> 。初，为侍禁<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;职官名。有文武之分。职在侍值禁中，故称。宋内侍官阶，有左侍禁﹑右侍禁，均为宫禁中侍奉之官。&lt;/p&gt;"><sup>113</sup></a>，约婚慈圣。既娶，迎入门，见鬼神千万在其前。植惊走，逾墙避之。后时即还父母家，俄 <span style="color: magenta; font-size: 80%">须臾、片刻</span> 选为后焉。《默记》卷中。《甲申杂记》。《玉芝堂谈荟》卷一。</li>
+</ol>
+<ol start="5" style="list-style-type: decimal">
 <li><p><span id="宋轶二-曹后-5"></span>
-庆历中，亲事官乘醉入禁中，仁宗皇帝遣谕：「皇后贵妃闭阁勿出。」后谨听命，贵妃直趋上前。明日，上对辅臣泣下，辅臣亦泣，首相陈恭公毅然无改容。上谓：「贵妃冒不测而来，斯可宠也。」枢相乘间启废立之议。张文定得其说，即诣恭公，以为不可。恭公持议甚坚。久而上复问之，梁相适进曰：「一之已甚，其可再乎？」声甚厉。既退，上留适曰：「朕止欲稍加妃礼，本无他意，卿可安心。」群论遂止。《闻见近录》。《道山清话》。</p></li>
+庆历中，亲事官<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;宋朝皇城司军卒名。分隶诸指挥使、都头、十将，掌郊祀大礼警戒、把守宫门，稽察人物，遇贡举则守贡院之门，兼刺探臣民之情。每五人为保，互相纠察，不得饮酒。有阙则于军头司招到人内选补。&lt;/p&gt;"><sup>114</sup></a>乘醉入禁中，仁宗皇帝遣谕：「皇后贵妃闭阁勿出。」后谨听命，贵妃直趋上前。明日，上对辅臣泣下，辅臣亦泣，首相陈恭公 <span style="color: magenta; font-size: 80%">陈执中</span> 毅然无改容。上谓：「贵妃冒不测而来，斯可宠也。」枢相<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;北宋枢相主要是在北宋神宗元丰改制之前，集中太祖、太宗、真宗、仁宗、神宗五朝。据笔者统计北宋枢相共有 22 人，除了马玉臣统计的 19 人基础上多了 3 人，分别是魏仁浦、王继英、狄青，其中王继英是枢密使任上卒，赠侍中，属于死后赠予枢相身份，没有实际的意义。太祖朝 2 人，分别是魏仁浦、吴延祚；太宗朝 1 人，曹彬；真宗朝 6 人，分别是王钦若、王继英、寇准、冯拯、陈尧叟、曹利用；仁宗朝 10 人，分别是王曙、王曾、晏殊、贾昌朝、王贻永、夏竦、宋庠、狄青、王德用、富弼；英宗朝 1 人，文彦博；神宗超 1 人，陈升之。以上统计可以看出基本上都是宰辅人员，这类人员或者是枢密长官升为枢相，如吴延祚、晏殊等，或者是曾任宰辅或者枢密长官被罢为枢相，如寇准、王曾等。&lt;/p&gt;&lt;p&gt;臧兴崇《北宋使相研究》&lt;/p&gt;"><sup>115</sup></a>乘间启废立之议。张文定得其说，即诣恭公，以为不可。恭公持议甚坚。久而上复问之，梁相适进曰：「一之已甚，其可再乎？」声甚厉。既退，上留适曰：「朕止欲稍加妃礼，本无他意，卿可安心。」群论遂止。《闻见近录》。《道山清话》。</p></li>
 <li><p><span id="宋轶二-曹后-6"></span>
 温成有宠，慈圣光献尝以事忤旨。仁宗一日语宰相梁适曰：「废后之事如何？」适进曰：「闾巷小人尚不忍为，陛下万乘之主，岂可再乎？」谓前已废郭后也。帝意解，因间语光献曰：「我尝欲废汝，赖梁适谏我，汝乃得免。汝之不废，适之力也。」后适死，光献常感之。忽一日，出五百万作醮，帝适见其事，问之，光献以实告。帝叹息。自后岁率为之，至光献上仙乃止。《曲洧旧闻》卷二。</p></li>
 <li><p><span id="宋轶二-曹后-7"></span>
@@ -1100,6 +1108,7 @@
 </ol>
 </div>
 </div>
+
   <div class="chapter-nav">
 <div class="prev"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%80-3.html"><span class="header-section-number">10</span> 宋人轶事汇编卷一</a></div>
 <div class="next"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html"><span class="header-section-number">12</span> 宋人轶事汇编卷三</a></div>
