githubhy published a site update

--- a/宋人轶事汇编卷二-4.html
+++ b/宋人轶事汇编卷二-4.html
@@ -479,27 +479,39 @@
 曹后 称制 <span style="color: magenta; font-size: 80%">行使天子的职权</span> 日，韩琦欲还政天子，而 御宝 <span style="color: magenta; font-size: 80%">天子的玺印</span> 在太后阁，皇帝行幸即随驾，琦因请具素仗祈雨。比乘舆还，御宝更不入太后阁，即于帘前具述皇帝圣德，都人瞻仰，无不欢慰，且言天下事久烦圣虑。太后怒曰：「教做也由相公，不教做也由相公。」琦独立帘外不去。及得一言，有允意，即再拜。驾起，遂促 仪鸾司<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;官署名。五代后滁开平元年（907），改同和院使为仪鸾使，掌卤簿仪钛。宋卫尉寺所属有仪鸾司，掌皇帝亲祠郊庙、出巡、宴享及宫廷供帐。所属有金银器皿帟幕什物库、香烛库、毡油床椅铁器杂物库。设勾当官四人，以诸司使副及内侍充任。明初属亲军都尉府，洪武十五年（1382）废。改置锦衣卫。&lt;/p&gt;"><sup>121</sup></a>拆帘。上自此亲政。《孙公谈圃》卷中。</li>
 </ol>
 <ol start="16" style="list-style-type: decimal">
-<li><p><span id="宋轶二-曹后-16"></span>
+<li>
+<span id="宋轶二-曹后-16"></span>
 韩魏公薨，其子孙倣 <span style="color: magenta; font-size: 80%">fǎng。仿</span> 郭汾阳 <span style="color: magenta; font-size: 80%">郭子仪</span> 著《家传》十卷，具载魏公功业。至英宗即位之初，乃云光献信谗，屡有不平之语，魏公以危言感动曰：「若官家失照管，太后亦未得安稳。」又言： 太后曾问 汉 昌邑王<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;刘贺（约前92年－前59年10月6日），曾任昌邑王、西汉第九任皇帝（前74年7月18日至8月14日在位）及海昏侯等。他原先继承父亲刘髆的昌邑王王位，后于汉昭帝突然死亡后，被由霍光控制的朝廷指定继位，但仅在位约27日即被朝廷剥夺皇位，并送回封地昌邑国。后来，他被皇位继任者汉宣帝授予海昏侯的爵位。&lt;/p&gt;"><sup>122</sup></a>事如何。又云：太后言：「昨夕梦甚异，见这孩儿却在庆宁宫。谓英宗复在旧邸。」魏公曰：「却在庆宁宫，乃是圣躬复旧之兆，此是好梦。」又言： 英宗不 豫 <span style="color: magenta; font-size: 80%">参与</span> ，魏公奏曰：「大王长立，且与照管。谓神宗。」后怒曰：「尚欲旧 窠 <span style="color: magenta; font-size: 80%">巢</span> 中求兔耶？」又言： 太后对大臣泣诉英宗语曰：「富弼意主太后。」又云： 太后欲御前殿，魏公论奏云云，乃止。又云： 台谏有章，乞早还政，太后泣曰：「若放下，更岂见眼道耶！」如此等事尚多，皆 诞妄 <span style="color: magenta; font-size: 80%">荒谬不实</span> 不恭，非所宜言。
-韩氏子孙，贩卖 松槚 <span style="color: magenta; font-size: 80%">sōng jiǎ。松、槚二树常被栽植墓前，亦作墓地的代称</span> ，张大勋业，以希进用，殊不知陷其父祖于不义也。<em>王岩叟</em> 者，父子为魏公之客，亦著《魏公遗事》一编，其记魏公言行甚详。至论光献权同听政事，亦为 欺诞 <span style="color: magenta; font-size: 80%">欺骗</span> 。谓太后还政之后，魏公劝英宗加仪卫 <span style="color: magenta; font-size: 80%">仪仗与卫士的统称</span> ，帝曰：「相公休奖纵母后。」又谓魏公对太后曰：「自家无子，不得不认。」察其意，以谓英宗非魏公不得立，既立，非魏公不得安也。《邵氏闻见录》卷三。</p></li>
+韩氏子孙，贩卖 松槚 <span style="color: magenta; font-size: 80%">sōng jiǎ。松、槚二树常被栽植墓前，亦作墓地的代称</span> ，张大勋业，以希进用，殊不知陷其父祖于不义也。<em>王岩叟</em> 者，父子为魏公之客，亦著《魏公遗事》一编，其记魏公言行甚详。至论光献权同听政事，亦为 欺诞 <span style="color: magenta; font-size: 80%">欺骗</span> 。谓太后还政之后，魏公劝英宗加仪卫 <span style="color: magenta; font-size: 80%">仪仗与卫士的统称</span> ，帝曰：「相公休奖纵母后。」又谓魏公对太后曰：「自家无子，不得不认。」察其意，以谓英宗非魏公不得立，既立，非魏公不得安也。《邵氏闻见录》卷三。</li>
+</ol>
+<ol start="17" style="list-style-type: decimal">
 <li><p><span id="宋轶二-曹后-17"></span>
-神庙当宁，慨然兴大有为之志，思欲问西北二境罪。一日被金甲诣慈寿宫，见太皇太后曰：「娘娘，臣著此好否？」曹后迎笑曰：「汝被甲甚好。虽然，使汝至衣此等物，则国家何堪矣。」神庙默然心服，遂卸金甲。《铁围山丛谈》卷一。</p></li>
+神庙 <span style="color: magenta; font-size: 80%">称宋神宗赵顼</span> 当宁<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;当宁，典故名，典出《礼记注疏》。宁，指古代宫室门内屏外之地。君主在此接受诸侯的朝见。后遂以“当宁”指皇帝临朝听政，后以泛指皇帝&lt;/p&gt;"><sup>123</sup></a>，慨然 <span style="color: magenta; font-size: 80%">激愤</span> 兴大有为之志，思欲问西北二境罪。一日被 <span style="color: magenta; font-size: 80%">披</span> 金甲 <span style="color: magenta; font-size: 80%">金饰的铠甲</span> 诣慈寿宫，见太皇太后曰：「娘娘，臣著此好否？」曹后迎笑曰：「汝被甲甚好。虽然，使汝至衣此等物，则国家何堪矣。」神庙默然心服，遂卸金甲。《铁围山丛谈》卷一。</p></li>
 <li><p><span id="宋轶二-曹后-18"></span>
-神宗初，欲破夏国。……一日，帝衣黄金甲以见光献太后，后曰：「官家着此，天下人如何？脱去，不祥。」又欲京城安楼橹，后亦不许，但以库贮于诸门。《邵氏闻见录》卷三。</p></li>
+神宗初，欲破夏国。……一日，帝衣黄金甲以见光献太后，后曰：「官家着此，天下人如何？脱去，不祥。」又欲京城安 楼橹 <span style="color: magenta; font-size: 80%">守城或攻城用的高台战具</span> ，后亦不许，但以库贮于诸门。《邵氏闻见录》卷三。</p></li>
 <li><p><span id="宋轶二-曹后-19"></span>
 见宋神宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E7%A5%9E%E5%AE%97-9">9</a>。</p></li>
+</ol>
+<ol start="20" style="list-style-type: decimal">
 <li><p><span id="宋轶二-曹后-20"></span>
-禁中近清明节，神宗侍曹太皇，因语：「自来却无人做珠子鞍辔。虽云太华，然亦好也。」太皇闻此语，已密令人描样矣。不数日，实促就珠子鞍辔，传宣索玉鞍辔一副。神宗莫测所欲用，亦莫敢问，依旨进入。太后令送后苑拆修，遂施珠鞯焉，其上作小红罗销金坐子，劣可容体，甫近上巳，以鞍架载之送神宗。神宗大感悦，取小乌马于福宁殿亲试之。……光献太皇太后疾病稍间，神宗亲制一小辇，极为轻巧，以珠玉黄金饰之，进于太皇云：「娘娘试乘此辇，往凉殿散心。」太皇曰：「今日意思无事，天气亦好。」遂载而之凉殿。太后扶其左，神宗扶其右，太皇下辇曰：「官家、太后亲自扶辇，当时在曹家作女时，安知有今日之盛！」喜见颜色。王正仲进光献挽词云：「珠鞯锡御恩犹在，玉辇亲扶事已空。」盖用此两事也。《孔氏谈苑》卷一。《宋诗纪事》卷十七。</p></li>
+禁中近清明节，神宗侍曹 太皇 <span style="color: magenta; font-size: 80%">太皇太后</span> ，因语：「自来却无人做珠子 鞍辔 <span style="color: magenta; font-size: 80%">ān pèi。马鞍和缰绳</span> 。虽云太 华 <span style="color: magenta; font-size: 80%">豪华</span> ，然亦好也。」太皇闻此语，已密令人描样矣。
+不数日，实促就珠子鞍辔，传宣索玉鞍辔一副。神宗莫测所欲用，亦莫敢问，依旨进入。太后令送后苑拆修，遂施珠 鞯 <span style="color: magenta; font-size: 80%">jiān。垫马鞍的垫子</span> 焉，其上作小 红罗 <span style="color: magenta; font-size: 80%">红色的轻软丝织品</span> 销金 <span style="color: magenta; font-size: 80%">用金或金色敷贴装饰物品</span> 坐子，劣 <span style="color: magenta; font-size: 80%">仅，只 [only]</span> 可容体，甫近上巳<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;汉以前定农历的三月上旬巳日为「上巳」。有修禊之俗，以拔除不祥。魏晋以后，则改在农历的三月三日。&lt;/p&gt;&lt;blockquote&gt;
+&lt;p&gt;《续汉书志．第四．礼仪志上》：「是月上巳，官民皆絜于东流水上，曰洗濯，祓除去宿垢疢为大絜。」
+宋．吴自牧《梦粱录．卷二．三月》：「三月三日上巳之辰，曲水流觞故事，起于晋时。唐朝赐宴曲江，倾都禊饮踏青，亦是此意。」&lt;/p&gt;
+&lt;/blockquote&gt;&lt;p&gt;上巳。&lt;/p&gt;"><sup>124</sup></a>，以鞍架载之送神宗。神宗大感悦，取小乌马于福宁殿亲试之。
+……光献太皇太后疾病稍间，神宗亲制一小辇，极为轻巧，以珠玉黄金饰之，进于太皇云：「娘娘试乘此辇，往凉殿散心。」太皇曰：「今日意思无事，天气亦好。」遂载而之凉殿。太后扶其左，神宗扶其右，太皇下辇曰：「官家、太后亲自扶辇，当时在曹家作女时，安知有今日之盛！」喜见颜色。
+王正仲进光献 挽词 <span style="color: magenta; font-size: 80%">哀悼死者的词章</span> 云：「珠鞯 锡 <span style="color: magenta; font-size: 80%">给予;赐给</span> 御恩犹在，玉辇亲扶事已空。」盖用此两事也。《孔氏谈苑》卷一。《宋诗纪事》卷十七。</p></li>
 <li><p><span id="宋轶二-曹后-21"></span>
-东坡既就逮下御史府，一日，慈圣曹太皇语上曰：「官家何事数日不怿？」对曰：「更张数事未就绪，有苏轼者，辄加谤讪，至形于文字。」太皇曰：「得非轼、辙乎？」上惊曰：「娘娘何以闻之？」曰：「吾尝记仁宗皇帝策试制举人罢归，喜而言曰：『朕今日得二文士，谓苏轼、辙也。然吾老矣，虑不能用，将以遗后人，不亦可乎？』」因泣问二人安在，上对以轼方系狱，则又泣下，上亦感动，始有贷轼意。《泊宅编》三卷本卷上、又十卷本卷一。《贵耳集》卷上。</p></li>
+东坡既 就逮 <span style="color: magenta; font-size: 80%">被逮捕</span> 下御史府，一日，慈圣曹太皇语上曰：「官家何事数日不怿？」对曰：「更张数事未就绪，有苏轼者，辄 <span style="color: magenta; font-size: 80%">总是</span> 加谤讪，至形于文字。」太皇曰：「得非轼、辙乎？」上惊曰：「娘娘何以闻之？」曰：「吾尝记仁宗皇帝策试制举人罢归，喜而言曰：『朕今日得二文士，谓苏轼、辙也。然吾老矣，虑不能用，将以遗后人，不亦可乎？』」因泣问二人安在，上对以轼方系狱，则又泣下，上亦感动，始有 贷 <span style="color: magenta; font-size: 80%">宽恕</span> 轼意。《泊宅编》三卷本卷上、又十卷本卷一。《贵耳集》卷上。</p></li>
 <li><p><span id="宋轶二-曹后-22"></span>
-慈圣光献大渐，上纯孝，欲肆赦。后曰：「不须赦天下凶恶，但放了苏轼足矣。」时子瞻对吏也。后又言：「昔仁宗策贤良归，喜甚，曰：『吾今日又为子孙得太平宰相两人。』盖轼、辙也，而杀之，可乎！」上悟，即有黄州之贬。《西塘集耆旧续闻》卷二。</p></li>
+慈圣光献 大渐 <span style="color: magenta; font-size: 80%">病危</span> ，上纯孝，欲 肆赦 <span style="color: magenta; font-size: 80%">大赦</span> 。后曰：「不须赦天下凶恶，但放了苏轼足矣。」时 <em>子瞻</em> <span style="color: magenta; font-size: 80%">苏轼字子瞻</span> 对吏也。后又言：「昔仁宗策贤良归，喜甚，曰：『吾今日又为子孙得太平宰相两人。』盖轼、辙也，而杀之，可乎！」上悟，即有黄州之贬。《西塘集耆旧续闻》卷二。</p></li>
 <li><p><span id="宋轶二-曹后-23"></span>
-光献太皇太后，元丰四年春感疾，以文字一函封𫔎甚严，付神宗曰：「俟吾死开之，唯不可因此罪人。」帝泣受。后疾愈，帝复纳此函。后曰：「姑收之。」是年七月，后上仙。帝开函，皆仁宗欲立英宗为皇嗣时，臣僚异议之书也。神宗执书恸哭，以太皇太后遗训，不敢追咎其人。故帝宫中服三年之丧。《邵氏闻见录》卷三。</p></li>
+光献太皇太后，<a href="%E5%AE%8B%E5%B9%B4%E5%8F%B7.html#%E5%B9%B4%E5%8F%B7-%E5%8C%97%E5%AE%8B">元丰</a>四年春感疾，以文字一函封𫔎甚严，付神宗曰：「俟吾死开之，唯不可因此罪人。」帝泣受。后疾愈，帝复 纳 <span style="color: magenta; font-size: 80%">缴纳，贡献 [pay;offer]</span> 此函。后曰：「姑收之。」
+是年七月，后上仙。帝开函，皆仁宗欲立英宗为皇嗣时，臣僚异议之书也。神宗执书恸哭，以太皇太后遗训，不敢追咎其人。故帝宫中服三年之丧。《邵氏闻见录》卷三。</p></li>
 <li><p><span id="宋轶二-曹后-24"></span>
-〔慈圣〕晚岁疾，病急，顾左右，问此为何日。左右对以十月二十日，实太祖大忌日也。后颔之，迺自语曰：「只此日去，只此日去，免烦他百官。」盖谓不欲别日立忌，使百官有司有奉慰行香之劳，就是日则免。于是二十日崩。《铁围山丛谈》卷一。《避暑漫钞》。</p></li>
+〔慈圣〕晚岁疾，病急，顾左右，问此为何日。左右对以十月二十日，实太祖大忌日也。后颔之，迺 <span style="color: magenta; font-size: 80%">同“乃”</span> 自语曰：「只此日去，只此日去，免烦他百官。」盖谓不欲别日立忌，使百官有司有奉慰行香之劳，就是日则免。于是二十日崩。《铁围山丛谈》卷一。《避暑漫钞》。</p></li>
 <li><p><span id="宋轶二-曹后-25"></span>
-慈圣曹太后工飞白，盖习观昭陵落笔也。先人旧藏一「美」字，径二尺许，笔势飞动，用慈寿宫宝。今不知何在矣。《老学庵笔记》卷二。</p></li>
+慈圣曹太后工 飞白 <span style="color: magenta; font-size: 80%">飞白书</span> ，盖习观 昭陵 <span style="color: magenta; font-size: 80%">仁宗葬永昭陵，宋人以昭陵作为仁宗的代称。</span> 落笔也。先人旧藏一「美」字，径二尺许，笔势飞动，用慈寿宫宝 <span style="color: magenta; font-size: 80%">用宝，盖玉玺</span> 。今不知何在矣。《老学庵笔记》卷二。</p></li>
 </ol>
 </div>
 <div id="张贵妃" class="section level2">
@@ -508,7 +520,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二-张贵妃-1"></span>
-西京留台李建中，博雅多艺，其子宗鲁善相人。一年春榜之京师，命择婿。行次任村逆旅，方就食，有丈夫荷布囊，从驱驴，亦就食于逆旅。宗鲁一见，前揖寒温，延之共案，询其所自，曰：「今春不第，将还洛也。」宗鲁不复之京师，与之同归洛中。其父诘之，曰：「今既得贵婿，可复回矣。此人生不出选调，死封真王。」于是婿之，乃张尧封也。实生温成皇后，天圣中登进士第，终亳州军事推官，后封清河郡王。《画墁录》。《归田录》卷二。《新编分门古今类事》卷十。《宋稗类钞》卷七。</p></li>
+西京 留台<a href="#fn125" class="footnote-ref" id="fnref125"><sup>125</sup></a> <em>李建中</em>，博雅多艺，其子 <em>宗鲁</em> 善相人。一年春榜之京师，命择婿。行次任村逆旅，方就食，有丈夫荷布囊，从驱驴，亦就食于逆旅。宗鲁一见，前揖寒温，延之共案，询其所自，曰：「今春不第，将还洛也。」宗鲁不复之京师，与之同归洛中。其父诘之，曰：「今既得贵婿，可复回矣。此人生不出选调，死封真王。」于是婿之，乃张尧封也。实生温成皇后，天圣中登进士第，终亳州军事推官，后封清河郡王。《画墁录》。《归田录》卷二。《新编分门古今类事》卷十。《宋稗类钞》卷七。</p></li>
 <li><p><span id="宋轶二-张贵妃-2"></span>
 吴越王子太师雅之女适张氏，生子名尧封，与尧佐为宗表兄弟。尧封游学南京，遂娶曹氏女。尧封俊迈，从学山东孙明复，至其舍，执事皆尧封妻女，如事亲焉。时文异倅南京，子彦博、彦若竝师明复，明复遂荐尧封于文氏为门客，张、文之好，始于此矣。尧封就举，与张文定同保，将引试，语文定曰：「宗表兄自无锡宰归，当往求举资。」及还，尧佐但与钱五百文。后尧封举进士第，任石州推官卒。其女入宫中为婕妤沈氏养女，是为温成皇后。久之，得幸仁宗，贵宠日盛。时相乃为访其族氏，会尧佐以太常博士知开州还，时相因以白上。……潞公召自蜀，将至阙下，贵妃亲视供帐以待，其夫人入谢。众论諠然。时贝州王则叛，仁宗北顾。妃乃阴喻潞公贝州事，明镐将有成绩，可请行。潞公既行，贝州平，潞公以功拜相，群论渐息。曹氏后封越国夫人。《闻见近录》。</p></li>
 <li><p><span id="宋轶二-张贵妃-3"></span>
@@ -637,7 +649,7 @@
 <li><p><span id="宋轶二-宋神宗-8"></span>
 〔神宗〕方即位初时，深欲相富弼，弼辞以疾，退居洛阳。弼在洛阳多以手疏论天下大利害，皆大臣之所不敢言者。神宗欣然开纳，赐以手札曰：「义忠言亲，理正文直，苟非意在爱君，志在王室，何以臻此？敢不置之枕席，铭诸肺腑，终老是戒！更愿公不替今日之志，则天灾不难弭，太平可立俟也。」尝因王安石有所建明，而却之曰：「若如此，则富弼手疏称『老臣无处告诉，但仰屋窃叹』者，即当至矣。」弼之薨，神宗躬制祭文，有曰：「言人所难，议定大策，谋施廊庙，泽被四方，他人莫得而预也。」《邵氏闻见后录》卷二十四。</p></li>
 <li><p><span id="宋轶二-宋神宗-9"></span>
-神宗既退司马温公，一时正人皆引去，独用王荆公，尽变更祖宗法度，用兵兴利，天下始纷然矣。帝一日侍太后，同祁王至太皇太后宫。……太皇太后曰：「吾闻民间甚苦青苗、助役钱，宜因赦罢之。」帝不怿，曰：「以利民，非苦之也。」太皇太后曰：「王安石诚有才学，然怨之者甚众。帝欲爱惜保全，不若暂出之于外，岁余复召用可也。」帝曰：「群臣中惟安石能横身为国家当事耳。」祁王曰：「太皇太后之言，至言也。陛下不可不思。」帝因发怒，曰：「是我败坏天下耶？汝自为之。」祁王泣曰：「何至是也。」皆不乐而罢。《邵氏闻见录》卷三。</p></li>
+神宗既退司马温公，一时 正人 <span style="color: magenta; font-size: 80%">正直的人；管事的人</span> 皆引去，独用王荆公，尽变更祖宗法度，用兵兴利，天下始纷然矣。帝一日侍太后，同祁王至太皇太后宫。……太皇太后曰：「吾闻民间甚苦青苗、助役钱，宜因赦罢之。」帝不 怿 <span style="color: magenta; font-size: 80%">yì。悦服</span> ，曰：「以利民，非苦之也。」太皇太后曰：「王安石诚有才学，然怨之者甚众。帝欲爱惜保全，不若暂出之于外，岁余复召用可也。」帝曰：「群臣中惟安石能横身为国家当事耳。」祁王曰：「太皇太后之言，至言也。陛下不可不思。」帝因发怒，曰：「是我败坏天下耶？汝自为之。」祁王泣曰：「何至是也。」皆不乐而罢。《邵氏闻见录》卷三。</p></li>
 <li><p><span id="宋轶二-宋神宗-10"></span>
 见曹后<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E6%9B%B9%E5%90%8E-17">17</a>。</p></li>
 <li><p><span id="宋轶二-宋神宗-11"></span>
@@ -1181,7 +1193,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-31.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-06-02.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
