githubhy published a site update

--- a/宋人轶事汇编卷二-4.html
+++ b/宋人轶事汇编卷二-4.html
@@ -19,7 +19,8 @@
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/6.4.6/fuse.js" integrity="sha512-zv6Ywkjyktsohkbp9bb45V6tEMoWhzFzXis+LrMehmJZZSys19Yxf1dopHx7WzIKxr5tK2dVcYmaCk2uqdjF4A==" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
 <script src="libs/bootstrap-4.6.0/bootstrap.bundle.min.js"></script><script src="libs/bs3compat-0.3.1/transition.js"></script><script src="libs/bs3compat-0.3.1/tabs.js"></script><script src="libs/bs3compat-0.3.1/bs3compat.js"></script><link href="libs/bs4_book-1.0.0/bs4_book.css" rel="stylesheet">
-<script src="libs/bs4_book-1.0.0/bs4_book.js"></script><script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/autocomplete.js/0.38.0/autocomplete.jquery.min.js" integrity="sha512-GU9ayf+66Xx2TmpxqJpliWbT5PiGYxpaG8rfnBEk1LL8l1KGkRShhngwdXK1UgqhAzWpZHSiYPc09/NwDQIGyg==" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js" integrity="sha512-5CYOlHXGh6QpOFA/TeTylKLWfB3ftPsde7AnmhuitiTX4K5SqCLBeKro6sPS8ilsz1Q4NRx3v8Ko2IBiszzdww==" crossorigin="anonymous"></script><!-- CSS --><style type="text/css">
+<script src="libs/bs4_book-1.0.0/bs4_book.js"></script><script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script><script src="libs/htmlwidgets-1.5.4/htmlwidgets.js"></script><script src="libs/viz-1.8.2/viz.js"></script><link href="libs/DiagrammeR-styles-0.2/styles.css" rel="stylesheet">
+<script src="libs/grViz-binding-1.0.9/grViz.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/autocomplete.js/0.38.0/autocomplete.jquery.min.js" integrity="sha512-GU9ayf+66Xx2TmpxqJpliWbT5PiGYxpaG8rfnBEk1LL8l1KGkRShhngwdXK1UgqhAzWpZHSiYPc09/NwDQIGyg==" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js" integrity="sha512-5CYOlHXGh6QpOFA/TeTylKLWfB3ftPsde7AnmhuitiTX4K5SqCLBeKro6sPS8ilsz1Q4NRx3v8Ko2IBiszzdww==" crossorigin="anonymous"></script><!-- CSS --><style type="text/css">
     
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
   </style>
@@ -496,8 +497,8 @@
 <li><p><span id="宋轶二-曹后-20"></span>
 禁中近清明节，神宗侍曹 太皇 <span style="color: magenta; font-size: 80%">太皇太后</span> ，因语：「自来却无人做珠子 鞍辔 <span style="color: magenta; font-size: 80%">ān pèi。马鞍和缰绳</span> 。虽云太 华 <span style="color: magenta; font-size: 80%">豪华</span> ，然亦好也。」太皇闻此语，已密令人描样矣。
 不数日，实促就珠子鞍辔，传宣索玉鞍辔一副。神宗莫测所欲用，亦莫敢问，依旨进入。太后令送后苑拆修，遂施珠 鞯 <span style="color: magenta; font-size: 80%">jiān。垫马鞍的垫子</span> 焉，其上作小 红罗 <span style="color: magenta; font-size: 80%">红色的轻软丝织品</span> 销金 <span style="color: magenta; font-size: 80%">用金或金色敷贴装饰物品</span> 坐子，劣 <span style="color: magenta; font-size: 80%">仅，只 [only]</span> 可容体，甫近上巳<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;汉以前定农历的三月上旬巳日为「上巳」。有修禊之俗，以拔除不祥。魏晋以后，则改在农历的三月三日。&lt;/p&gt;&lt;blockquote&gt;
-&lt;p&gt;《续汉书志．第四．礼仪志上》：「是月上巳，官民皆絜于东流水上，曰洗濯，祓除去宿垢疢为大絜。」
-宋．吴自牧《梦粱录．卷二．三月》：「三月三日上巳之辰，曲水流觞故事，起于晋时。唐朝赐宴曲江，倾都禊饮踏青，亦是此意。」&lt;/p&gt;
+&lt;p&gt;《续汉书志．第四．礼仪志上》：「是月上巳，官民皆絜于东流水上，曰洗濯，祓除去宿垢疢为大絜。」&lt;/p&gt;
+&lt;p&gt;宋．吴自牧《梦粱录．卷二．三月》：「三月三日上巳之辰，曲水流觞故事，起于晋时。唐朝赐宴曲江，倾都禊饮踏青，亦是此意。」&lt;/p&gt;
 &lt;/blockquote&gt;&lt;p&gt;上巳。&lt;/p&gt;"><sup>124</sup></a>，以鞍架载之送神宗。神宗大感悦，取小乌马于福宁殿亲试之。
 ……光献太皇太后疾病稍间，神宗亲制一小辇，极为轻巧，以珠玉黄金饰之，进于太皇云：「娘娘试乘此辇，往凉殿散心。」太皇曰：「今日意思无事，天气亦好。」遂载而之凉殿。太后扶其左，神宗扶其右，太皇下辇曰：「官家、太后亲自扶辇，当时在曹家作女时，安知有今日之盛！」喜见颜色。
 王正仲进光献 挽词 <span style="color: magenta; font-size: 80%">哀悼死者的词章</span> 云：「珠鞯 锡 <span style="color: magenta; font-size: 80%">给予;赐给</span> 御恩犹在，玉辇亲扶事已空。」盖用此两事也。《孔氏谈苑》卷一。《宋诗纪事》卷十七。</p></li>
@@ -519,10 +520,34 @@
 <span class="header-section-number">12.4</span> 张贵妃<a class="anchor" aria-label="anchor" href="#%E5%BC%A0%E8%B4%B5%E5%A6%83"><i class="fas fa-link"></i></a>
 </h2>
 <ol style="list-style-type: decimal">
-<li><p><span id="宋轶二-张贵妃-1"></span>
-西京 留台<a href="#fn125" class="footnote-ref" id="fnref125"><sup>125</sup></a> <em>李建中</em>，博雅多艺，其子 <em>宗鲁</em> 善相人。一年春榜之京师，命择婿。行次任村逆旅，方就食，有丈夫荷布囊，从驱驴，亦就食于逆旅。宗鲁一见，前揖寒温，延之共案，询其所自，曰：「今春不第，将还洛也。」宗鲁不复之京师，与之同归洛中。其父诘之，曰：「今既得贵婿，可复回矣。此人生不出选调，死封真王。」于是婿之，乃张尧封也。实生温成皇后，天圣中登进士第，终亳州军事推官，后封清河郡王。《画墁录》。《归田录》卷二。《新编分门古今类事》卷十。《宋稗类钞》卷七。</p></li>
-<li><p><span id="宋轶二-张贵妃-2"></span>
-吴越王子太师雅之女适张氏，生子名尧封，与尧佐为宗表兄弟。尧封游学南京，遂娶曹氏女。尧封俊迈，从学山东孙明复，至其舍，执事皆尧封妻女，如事亲焉。时文异倅南京，子彦博、彦若竝师明复，明复遂荐尧封于文氏为门客，张、文之好，始于此矣。尧封就举，与张文定同保，将引试，语文定曰：「宗表兄自无锡宰归，当往求举资。」及还，尧佐但与钱五百文。后尧封举进士第，任石州推官卒。其女入宫中为婕妤沈氏养女，是为温成皇后。久之，得幸仁宗，贵宠日盛。时相乃为访其族氏，会尧佐以太常博士知开州还，时相因以白上。……潞公召自蜀，将至阙下，贵妃亲视供帐以待，其夫人入谢。众论諠然。时贝州王则叛，仁宗北顾。妃乃阴喻潞公贝州事，明镐将有成绩，可请行。潞公既行，贝州平，潞公以功拜相，群论渐息。曹氏后封越国夫人。《闻见近录》。</p></li>
+<li>
+<span id="宋轶二-张贵妃-1"></span>
+西京 留台<a href="#fn125" class="footnote-ref" id="fnref125"><sup>125</sup></a> <em>李建中</em>，博雅多艺，其子 <em>宗鲁</em> 善相人。一年 春榜 <span style="color: magenta; font-size: 80%">春试</span> 之 京师，命择婿。行次任村逆旅，方就食，有丈夫荷布囊，从驱驴，亦就食于逆旅。宗鲁一见，前揖 寒温<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;见面时彼此问候生活起居，或泛谈气候寒暖等的应酬话。&lt;/p&gt;&lt;blockquote&gt;
+&lt;p&gt;梁．吴均《续齐谐记．阳羡书生》：「仍与彦叙寒温，书生卧欲觉。」&lt;/p&gt;
+&lt;p&gt;《红楼梦．第九二回》：「彼此相见，叙些寒温。」也作「寒暄」、「暄凉」。&lt;/p&gt;
+&lt;/blockquote&gt;&lt;p&gt;寒温。&lt;/p&gt;"><sup>126</sup></a>，延 <span style="color: magenta; font-size: 80%">邀请;请 [invite]</span> 之共案，询其所自，曰：「今春不第，将还洛也。」宗鲁不复之京师，与之同归洛中。其父诘之，曰：「今既得贵婿，可复回矣。此人生不出 选调 <span style="color: magenta; font-size: 80%">旧谓候补官员等待迁调</span> ，死封真王。」于是婿之，乃 <em>张尧封</em> 也。实生温成皇后，天圣中登进士第，终亳州 军事推官<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;官名。唐玄宗天宝(742～756)以后，节度、观察、团练、防御诸使皆置为幕职，掌助理军政。北宋神宗元丰(1078—1085)改制，定为从八品。徽宗崇宁二年(1103)重定选人阶官，换从事郎。&lt;/p&gt;"><sup>127</sup></a>，后封清河郡王。《画墁录》。《归田录》卷二。《新编分门古今类事》卷十。《宋稗类钞》卷七。</li>
+</ol>
+<ol start="2" style="list-style-type: decimal">
+<li>
+<span id="宋轶二-张贵妃-2"></span>
+吴越王子太师雅之女 适 <span style="color: magenta; font-size: 80%">女子出嫁</span> <em>张氏</em> ，生子名 <em>尧封</em>，与 <em>尧佐</em> 为宗表兄弟。尧封游学南京，遂娶 <em>曹氏女</em>。尧封俊迈，从学山东 <em>孙明复</em> ，至其舍，执事 <span style="color: magenta; font-size: 80%">供使唤差遣的人</span> 皆尧封妻女，如事亲焉。
+时 <em>文异</em> 倅 <span style="color: magenta; font-size: 80%">zú。古同“卒”</span> 南京，子 <em>彦博</em>、<em>彦若</em> 竝 <span style="color: magenta; font-size: 80%">同“并”</span> 师明复，明复遂荐尧封于文氏为门客，张、文之好，始于此矣。
+尧封就举，与 <em>张文定</em> 同 保 <span style="color: magenta; font-size: 80%">保甲</span> ，将 引试 <span style="color: magenta; font-size: 80%">引保就试</span> ，语 文定 曰：「宗表兄自无锡宰归，当往求举资。」及还，尧佐但与钱五百文。
+后尧封举进士第，任石州 推官<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;唐朝节度使、观察使、团练使、防御使等幕府均设有推官，地位仅次于判官、掌书记，并用以掌理刑狱司法。&lt;/p&gt;&lt;p&gt;宋代沿用推官一职，郡推官属于佐官，三司各部推官主管各案公事。京师开封府设左、右两厅，每厅有推官一员。&lt;/p&gt;"><sup>128</sup></a> 卒。其女入宫中为婕妤 <em>沈氏</em> 养女，是为温成皇后。久之，得幸仁宗，贵宠日盛。时相乃为访其族氏，会尧佐以 太常博士<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;职官名。掌管宗庙礼仪。两汉太常博士兼掌选试之官，魏晋以后则专为议礼之官，到清代仅掌缮写文牍。&lt;/p&gt;"><sup>129</sup></a>知开州还，时相因以白上。
+……潞公 <span style="color: magenta; font-size: 80%">文彦博</span> 召自蜀，将至阙下，贵妃亲视 供帐<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;1.亦作“供张”。
+2.陈设供宴会用的帷帐﹑用具﹑饮食等物。亦谓举行宴会。
+3.指供宴饮之用的帷帐﹑用具﹑饮食等物。
+4.僧尼呈报名册于官府。&lt;/p&gt;&lt;p&gt;供帐。&lt;/p&gt;"><sup>130</sup></a>以待，其夫人 入谢 <span style="color: magenta; font-size: 80%">入朝谢罪</span> 。众论 諠然 <span style="color: magenta; font-size: 80%">声大而杂貌</span> 。
+时 贝州<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;贝州，中国南北朝时设置的州。&lt;/p&gt;&lt;p&gt;北周建德七年（578年），分相州的清河郡设置，因为境内贝丘，所以称贝州。治所在武城县（隋朝改名清河县，今河北省清河县西北）。包括今河北省清河县、威县、临西县、故城县，山东省临清市、夏津县、武城县。1048年，宋朝平定王则之乱，改贝州之名为恩州。&lt;/p&gt;"><sup>131</sup></a> <em>王则</em> 叛，仁宗北顾。妃乃 阴 喻 <span style="color: magenta; font-size: 80%">告知</span> 潞公贝州事，明 镐 <span style="color: magenta; font-size: 80%">通“皓”。光明的样子</span> 将有成绩，可请行。潞公既行，贝州平，潞公以功拜相，群论渐息。曹氏后封越国夫人。《闻见近录》。</li>
+</ol>
+<div class="figure">
+<span style="display:block;" id="fig:图-张贵妃人物关系"></span>
+<div id="htmlwidget-f1cb5f91aebeda86af9e" style="width:672px;height:500px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f1cb5f91aebeda86af9e">{"x":{"diagram":"digraph {\n    # https://stackoverflow.com/questions/2271704/family-tree-layout-with-dot-graphviz\n    graph [layout = dot, splines=ortho, fontsize = 10]\n    node [shape = box, style = filled, color = DimGray]\n\n    node []\n    文异\n    node [fillcolor = Salmon]\n    太师雅之女; 曹氏女[label=曹氏，越国夫人]; 温成皇后; 婕妤沈氏\n    node [fillcolor = MediumAquamarine]\n    张氏; 张尧封; 张尧佐; 文彦博 [label=文彦博，潞公]; 文彦若; 孙明复; 张文定\n    node [shape = point, fillcolor = Black]\n    marriage雅女and张; marriage尧封and曹女; marriage文异child\n    edge [color = DimGray, dir = none, fontsize = 8]\n\n    {rank = same; 张氏 -> marriage雅女and张 -> 太师雅之女 文异 -> marriage文异child 孙明复};\n    {rank = same; color=blue; 张尧封 -> marriage尧封and曹女 -> 曹氏女 文彦博 文彦若 张文定 张尧佐};\n    {rank = same; 温成皇后}\n    marriage雅女and张 -> 张尧封 marriage尧封and曹女 -> 温成皇后\n    文异child -> 文彦博 文异child -> 文彦若\n\n    婕妤沈氏 -> 温成皇后[xlabel=养女]\n\n    张尧佐 -> 张尧封[xlabel=宗表]\n    张尧封 -> 孙明复[xlabel=从学] 文彦博 -> 孙明复[xlabel=从学] 文彦若 -> 孙明复[xlabel=从学]\n    张尧封 -> 张文定[xlabel=同保]\n    }","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script><p class="caption">
+图 12.2: 张贵妃人物关系
+</p>
+</div>
+<ol start="3" style="list-style-type: decimal">
 <li><p><span id="宋轶二-张贵妃-3"></span>
 庆历中，广州有死蕃商没官珍珠，有司贱估其直，十分价中才及一分，令郡官分买之，为本路监司按劾，计赃并珍珠赴京师具案。既上，仁宗时于禁中闻之，且命取所估珍珠，上与宫官同阅，爱其珍异。张贵妃在侧，意欲得之，上依所估价，出禁中钱易之以赐贵妃。时禁中同列因是有于上乞旨和买，缘此京师珠价腾踊，上颇知之。一日，上于别殿赏牡丹，妃嫔毕集，贵妃最后至，乃以前日珍珠为首饰，以夸同辈，欲至上前。上望见，以袖掩面曰：「满头白纷纷的，都没些忌讳。」贵妃慙赧，起易之。乃大悦，使人各簪牡丹一枝，自是禁中更不戴珍珠，价大减。《元城语录》卷中。《苕溪渔隐丛话》后集卷十九。</p></li>
 <li><p><span id="宋轶二-张贵妃-4"></span>
