githubhy published a site update

--- a/宋人轶事汇编卷九-1.html
+++ b/宋人轶事汇编卷九-1.html
@@ -604,8 +604,13 @@
 王荆公于杨寘榜下第四人及第。是时，晏元献为枢密使，上令十人往谢。晏公俟众人退，独留荆公，再三谓曰：「廷评乃殊乡里，久闻德行乡评之美。况殊备位执政，而乡人之贤者取高科，实预荣焉。」又曰：「休沐日相邀一饭。」荆公唯唯。既出，又使直省官相约饭会，甚慇懃也。比往时，待遇极至。饭罢，又延坐，谓荆公曰：「乡人他日名位如殊坐处，为之有余矣。」且叹慕之又数十百言，最后曰：「然有二语欲奉闻，不知敢言否？」晏公言至此，语欲出而拟议久之。晏公泛谓荆公曰：「能容于物，物亦容矣。」荆公但微应之，遂散。公归至旅舍，叹曰：「晏公为大臣，而教人者以此，何其卑也！」心颇不平。荆公后罢相，其弟和甫知金陵，时说此事，且曰：「当时我大不以为然。我在政府，平生交友，人人与之为敌，不保其终。今日思之，不知晏公何以知之；复不知『能容于物，物亦容焉』二句有出处，或公自为之言也。」《默记》卷中。《清波杂志》卷四。《宋稗类钞》卷三。</p></li>
 <li><p><span id="宋轶九-晏殊-26"></span>
 红梅清艳两绝，昔独盛于姑苏，晏元献始移植西岗第中，特珍赏之。一日，贵游赂园吏，得一枝分接，由是都下有二本。公尝与客饮花下，赋诗曰：「若更迟开三二月，北人应作杏花看。」客曰：「公诗固佳，待北俗何浅耶！」公笑曰：「顾伧父安得不然？」一座绝倒。王君玉闻盗花种事，以诗遗公：「馆娃宫北旧精神，粉瘦琼寒露蘂新。园吏无端偷折去，凤城从此有双身。」自尔名园争培接，遍都城矣。《西清诗话》卷下。《苕溪渔隐丛话》前集卷二十六。《梅谱》。《尧山堂外纪》卷四十六。</p></li>
+</ol>
+<ol start="27" style="list-style-type: decimal">
 <li><p><span id="宋轶九-晏殊-27"></span>
-曾布以翰林学士权三司使，坐言市易事落职，知饶州。舍人许将当制，颇多斥词，制下，将往见曾而告：「始得词头，深欲缴纳。又思之，衅隙如此，不过同贬耳，于公无所益也，遂黾勉为之。然其中语言颇经改易，公他日当自知也。」曾曰：「君不闻宋子京之事乎？昔晏元献公当国，子京为翰林学士，晏爱宋之才，雅欲旦夕相见，遂税一第于旁近，延居之，其亲密如此。遇中秋，晏公启宴，召宋，出妓，饮酒赋诗，达旦方罢。翌日罢相，宋当草词，颇极诋斥，至有『广营产以殖私，多役兵而规利』之语。方子京挥毫之际，昨夕余酲尚在，左右观者亦骇叹。盖此事由来久矣，何足校耶！」许亦怃然而去。《东轩笔录》卷十。《苕溪渔隐丛话》前集卷二十六。《尧山堂外纪》卷四十六。《青泥莲花记》卷五。《宋稗类钞》卷六。《宋诗纪事》卷七。案：《旧闻证误》卷二曰：「苏子由谓景文救解元献，曾子宣谓景文诋斥晏公，二者皆误。」</p></li>
+<em>曾布</em> 以翰林学士 权 <span style="color: magenta; font-size: 80%">唐以来的称试官或暂时代理官职为“权”</span> 三司使<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;北宋沿设，三司使掌全国钱谷出纳、均衡财政收支，为中央最高财政长官，号称“计相”。宋神宗元丰五年(公元1082年)改官制，三司使职掌归并于户部尚书。&lt;/p&gt;"><sup>134</sup></a>，坐言 市易事 <span style="color: magenta; font-size: 80%">市易法。王安石推行的新法之一</span> 落职，知 饶州<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;饶州(隋朝)，隋朝时设置的州，在今江西省境&lt;/p&gt;"><sup>135</sup></a>。
+舍人 <em>许将</em> 当制 <span style="color: magenta; font-size: 80%">值班起草制诰</span> ，颇多斥词，制下，将往见曾而告：「始得词头，深欲 缴纳 <span style="color: magenta; font-size: 80%">被强制交纳</span> 。又思之，衅隙 <span style="color: magenta; font-size: 80%">意见不合或感情有裂痕</span> 如此，不过同贬耳，于公无所益也，遂 <span style="color: magenta; font-size: 80%">就;于是</span> 黾勉 <span style="color: magenta; font-size: 80%">勉力;努力</span> 为之。然其中语言颇经改易，公他日当自知也。」
+曾曰：「君不闻 <em>宋子京</em> 之事乎？昔晏元献公当国，子京为翰林学士，晏爱宋之才，雅 <span style="color: magenta; font-size: 80%">程度很甚，相当于“很”、“极” [very]</span> 欲旦夕相见，遂 税 <span style="color: magenta; font-size: 80%">租赁</span> 一第于旁近，延居之，其亲密如此。
+遇中秋，晏公启宴，召宋，出妓，饮酒赋诗，达旦方罢。翌日罢相，宋当草词，颇极诋斥，至有『广营产以殖私，多役兵而 规利 <span style="color: magenta; font-size: 80%">图利</span> 』之语。方子京挥毫之际，昨夕余酲尚在，左右观者亦骇叹。盖此事由来久矣，何足 校 <span style="color: magenta; font-size: 80%">比较</span> 耶！」许亦 怃然 <span style="color: magenta; font-size: 80%">wǔ rán。怅然失意貌</span> 而去。《东轩笔录》卷十。《苕溪渔隐丛话》前集卷二十六。《尧山堂外纪》卷四十六。《青泥莲花记》卷五。《宋稗类钞》卷六。《宋诗纪事》卷七。案：《旧闻证误》卷二曰：「苏子由谓 <em>景文</em> <span style="color: magenta; font-size: 80%">宋子京</span> 救解元献，曾子宣谓景文诋斥晏公，二者皆误。」</p></li>
 <li><p><span id="宋轶九-晏殊-28"></span>
 晏元献罢相守颍州。一日，有歧路人献杂手艺者，作踏索之伎。已而掷索向空，索植立，遂缘索而上，快若风雨，遂飞空而去，不知所在。公大骇莫测。已而守衙排军白公曰：「顷尝出戍，曾记见此等事，但请阖郡谯门大索，必获。盖斯等妖术未能遽出府门也。」公如请，戒众兵曰：「凡遇非衙中旧有之物，即以斧斫之。」既周视无有。最后于马院旁一卒曰：「旧有系马柱五枚，今有六枚，何也？」亟斫之，即大呼，乃人尔。遂获妖人。《默记》卷下。</p></li>
 <li><p><span id="宋轶九-晏殊-29"></span>
@@ -865,6 +870,7 @@
 </ol>
 </div>
 </div>
+
   <div class="chapter-nav">
 <div class="prev"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB.html"><span class="header-section-number">18</span> 宋人轶事汇编卷八</a></div>
 <div class="next"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81-1.html"><span class="header-section-number">20</span> 宋人轶事汇编卷十</a></div>
