--- a/宋人轶事汇编卷十二.html
+++ b/宋人轶事汇编卷十二.html
@@ -185,8 +185,11 @@
 枢密直学士明镐讨贝州，久未下，上深以为忧，问于两府，参知政事文彦博请自往督战。八年正月丁丑，以彦博为河北宣抚使，监诸将讨贝州。时枢密使夏竦恶镐，凡镐所奏请，多从中沮，唯恐其成功。彦博奏：「今在军中，请得便宜从事，不中覆。」上许之。闰月庚子朔，克贝州，擒王则。初，彦博至贝州，与明镐督诸将筑距闉以攻城，旬余不下，有牢城卒董秀、刘炳请穴地以攻城，彦博许之。贝州城南临御河，秀等夜于岸下潜穿穴，弃土于水，昼匿穴中，城上不之见也。久之，穴成，自教场中出。秀等以褐袍塞之，走白彦博，选敢死士二百，命指使将之，衔枚自穴入。有帐前虞候杨遂请行，许之。遂白：「军士中有病欬者数人，此不可去，请易之。」从之。既出穴，登城杀守者，垂𫄠以引城下之人，城中惊扰。贼以火牛突登城者，登城者不能拒，颇引却。杨遂力战，身被十余创，援鎗刺牛，牛却走践贼，贼遂溃。王则、张峦、卜吉与其党突围走，至村舍，官军追围之。则犹着花幞头，军士争趣之，部署王信恐则死无以辨，以身覆其上，遂生擒之。峦、吉死于乱兵，不知所在。彦博请斩则于北京，夏竦奏言所获贼魁恐非真，遂槛车送京师，剐于马市。董秀、刘炳并除内殿崇班。《涑水记闻》卷九。《宋朝事实类苑》卷五十六。《宋名臣言行后录》卷三。</p></li>
 <li><p><span id="宋轶十二-文彦博-15"></span>
 上顾彦博曰：「卿，朕之裴度。」《宋朝事实》卷十六。《古事比》卷二十一。</p></li>
+</ol>
+<ol start="16" style="list-style-type: decimal">
 <li><p><span id="宋轶十二-文彦博-16"></span>
-文彦博相，因张贵妃也。贵妃父尧封，尝为文彦博父洎门客，贵妃认尧佐为伯父，又欲士大夫为助，于是诱进彦博。彦博知成都，贵妃以近上元，令织异色锦。彦博遂令工人织金线灯笼，载莲花，中为锦纹，又为秋迁，以备寒食。贵妃始衣之，上惊曰：「何处有此锦？」妃正色曰：「昨令成都文彦博织来，以尝与妾父有旧。然妾安能使之？盖彦博奉陛下耳。」上色怡，自尔属意彦博。彦博自成都归，不久参知政事。贝州王则叛，朝廷以明镐往取之。贼将破，上以近京，甚忧之。一日宫中语曰：「执政大臣，无一人为国家了事者，日日上殿，无有取贼意，何益？」贵妃密令人语彦博，明日上殿，乞身往破贼。上大喜，以彦博往统军。至则镐已破，贼擒矣。捷书至，遂就路拜彦博同平章事。后因监察御史唐介拜疏，召彦博殿上，面条奇锦事数件，质于上，皆实事，彦博守本官出知许州。明年上元，中官有诗曰：「无人更进灯笼锦，红粉宫中忆佞臣。」上闻此句亦笑。《碧云騢》。《宋稗类钞》卷六。</p></li>
+文彦博相，因张贵妃也。贵妃父尧封，尝为文彦博父洎门客，贵妃认尧佐为伯父，又欲士大夫为助，于是诱进彦博。彦博知成都，贵妃以近上元，令织异色锦。彦博遂令工人织金线灯笼，载莲花，中为锦纹，又为 秋迁 <span style="color: magenta; font-size: 80%">秋千</span> ，以备寒食。贵妃始衣之，上惊曰：「何处有此锦？」妃正色曰：「昨令成都文彦博织来，以尝与妾父有旧。然妾安能使之？盖彦博奉陛下耳。」上色怡，自尔属意彦博。彦博自成都归，不久参知政事。
+贝州王则叛，朝廷以明镐往取之。贼将破，上以近京，甚忧之。一日宫中语曰：「执政大臣，无一人为国家了事者，日日上殿，无有取贼意，何益？」贵妃密令人语彦博，明日上殿，乞身往破贼。上大喜，以彦博往统军。至则镐已破，贼擒矣。捷书至，遂就路拜彦博 同平章事<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;同中书门下平章事简称同平章事，同平章事初用于唐太宗时。自高宗永淳元年（公元682年）始，实际担任宰相者，或加以同中书门下平章事的名义。中书、门下二省本为政务中枢，同中书门下平章事即与中书、门下协商处理政务之意。&lt;/p&gt;"><sup>144</sup></a>。后因监察御史 <em>唐介</em> 拜疏 <span style="color: magenta; font-size: 80%">上奏章</span> ，召彦博殿上，面条奇锦事数件，质于上，皆实事，彦博守 本官 <span style="color: magenta; font-size: 80%">原官职</span> 出知许州。明年上元，中官有诗曰：「无人更进灯笼锦，红粉宫中忆佞臣。」上闻此句亦笑。《碧云騢》。《宋稗类钞》卷六。</p></li>
 <li><p><span id="宋轶十二-文彦博-17"></span>
 见张贵妃<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%BC%A0%E8%B4%B5%E5%A6%83-2">2</a>。</p></li>
 <li><p><span id="宋轶十二-文彦博-18"></span>
@@ -1027,6 +1030,7 @@
 </ol>
 </div>
 </div>
+
   <div class="chapter-nav">
 <div class="prev"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html"><span class="header-section-number">21</span> 宋人轶事汇编卷十一</a></div>
 <div class="next"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html"><span class="header-section-number">23</span> 宋人轶事汇编卷十三</a></div>
